# opsgate

./: .env.example  .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
src/opsgate/: __init__.py  __main__.py  app.py  config.py  runner.py  service.py
src/opsgate/templates/: forbidden.html  login.html  ticket_detail.html  ticket_log.html  tickets.html
tests/: test_api.py  test_config.py  test_runner.py
