[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opsgate"
version = "0.2.0"
description = "OpsGate control service and runner (Phase 4B)"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Jochen Wersdoerfer"}
]
dependencies = [
  "Flask>=3.0,<4.0",
  "bcrypt>=4.1,<5.0",
  "waitress>=3.0,<4.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.7,<0.8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opsgate = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
mypy_path = ["src"]
